# OOP244-Seneca

./: README.md
Final_Project/MS1/: Menu.cpp  Menu.h  ws
Final_Project/MS2/: LibApp.cpp  LibApp.h
Final_Project/MS3/: Lib.h  Periodicals.txt  Publication.cpp  Streamable.h
Final_Project/MS4/: Publication.cpp  ms4_tester.cpp  ws
Final_Project/MS5/: Book.cpp  Book.h  Date.cpp  Lib.h  LibApp.cpp  LibApp.h  Menu.cpp  Menu.h  Publication.cpp  Publication.h  Streamable.cpp
Week_07/WS07-PART-01/: CMakeLists.txt  MemberParliament.cpp  MemberParliament.h  Minister.cpp  Minister.h
Week_07/WS07-PART-02/: reflect.txt
Week_08/WS08-PART-01/: Account.cpp  Account.h  Allocator.cpp  CMakeLists.txt  ChequingAccount.cpp  ChequingAccount.h  SavingsAccount.cpp  SavingsAccount.h  iAccount.h
Week_08/WS08-PART-02/: reflect.txt
Week_09/WS09-PART-01/: CMakeLists.txt  FullName.cpp  FullName.h  Name.cpp  Name.h
Week_09/WS09-PART-02/: reflect.txt
Week_10/WS10-PART-01/: CMakeLists.txt  main.cpp  templateFunctions.h
Week_10/WS10-PART-02/: reflect.txt
